# sbadmin2-rust

./: .gitignore  Cargo.toml  Procfile  README.md
src/: index.rs  main.rs  tests.rs
templates/: 404.html.tera  app.html.tera  blank.html.tera  buttons.html.tera  cards.html.tera  charts.html.tera  forgot-password.html.tera  index.html.tera  login.html.tera  package-lock.json  package.json  register.html.tera  tables.html.tera  utilities-animation.html.tera  utilities-border.html.tera  utilities-color.html.tera  utilities-other.html.tera
