[package]
name = "sbadmin_rust"
version = "0.1.2"
authors = ["isaacdarcilla <https://github.com/isaacdarcilla>"]
edition = "2018"
description = "Admin dashboard template for Rust and Rocket.rs based on SbAdmin2."
homepage = "http://isaaaac.me/"
repository = "https://github.com/isaacdarcilla/sbadmin2-rust"
keywords = ["sbadmin2", "graphics", "dashboard", "template"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

[dependencies.rocket_contrib]
version = "0.4.4"
default-features = false
features = ["tera_templates", "serve"]
